# wordguess

./: .gitignore  MANIFEST.in  README.md  setup.cfg  wordguess.py
test/: test_wordguess.py
wordguess/: wordguess.py  words.txt
