[metadata]
name = wordguess
version = 0.0.0
description = Word guessing game by selecting letters one at a time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/wordguess
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
# py_modules = wordguess
packages = find:
install_requires:
    importlib-metadata>=1.6;python_version<"3.8"
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    test
    test*

[options.entry_points]
console_scripts =
    wordguess = wordguess:main
