[metadata]
name = wordguess
version = 0.0.0
description = Word guessing game by selecting letters one at a time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/wordguess
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    argparse_types
    argparse_custom_types >= 0.2.0
python_requires = >= 3.6.1
include_package_data = True

[options.packages.find]
exclude =
    tests*
    test
    test*

[options.entry_points]
console_scripts =
    wordguess = wordguess.wordguess:main
