[metadata]
name = wordguess
version = 1.0.0
description = Word guessing game by selecting letters one at a time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/wordguess
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    importlib-metadata>=1.6;python_version<"3.8"
python_requires = >= 3.7
include_package_data = True

[options.package_data]
wordguess =
    words.txt

[options.packages.find]
exclude =
    tests*
    test
    test*

[options.entry_points]
console_scripts =
    wordguess = wordguess.wordguess:main
